@@ -11,40 +11,52 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <testng.version>7.4.0</testng.version>
+
     <selenium.version>4.0.0</selenium.version>
     <webdriver.version>5.0.3</webdriver.version>
+
     <checkstyle.version>8.42</checkstyle.version>
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+
     <assertj.version>3.21.0</assertj.version>
-    <assetj.version>3.21.0</assetj.version>
+
+    <aspectj.version>1.9.5</aspectj.version>
+    <allure.version>2.14.0</allure.version>
   </properties>
 
   <profiles>
     <profile>
-      <id>homework2-differnt-page-test-suite</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
+      <id>homework4-all-steps-test-suite</id>
       <properties>
-        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/DifferentElementsPageTestSuite.xml</suite.xml.name>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/AllStepsTestSuite.xml</suite.xml.name>
+      </properties>
+    </profile>
+
+
+    <profile>
+      <id>homework4-differnt-page-test-suite</id>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/DifferentElementsPageTestSuite.xml</suite.xml.name>
       </properties>
     </profile>
 
     <profile>
-      <id>homework2-home-page-test-suite</id>
+      <id>homework4-home-page-test-suite</id>
       <properties>
-        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/HomePageTestSuite.xml</suite.xml.name>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw4/HomePageTestSuite.xml</suite.xml.name>
       </properties>
     </profile>
 
     <profile>
       <id>homework3-differnt-page-test-suite</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <!--<activeByDefault>true</activeByDefault>-->
       </activation>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw3/DifferentElementsPageTestSuite.xml</suite.xml.name>
@@ -59,6 +71,23 @@
     </profile>
 
     <profile>
+      <id>homework2-differnt-page-test-suite</id>
+      <activation>
+        <!-- <activeByDefault>true</activeByDefault>-->
+      </activation>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/DifferentElementsPageTestSuite.xml</suite.xml.name>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>homework2-home-page-test-suite</id>
+      <properties>
+        <suite.xml.name>${project.basedir}/src/test/resources/home.epam.hw2/HomePageTestSuite.xml</suite.xml.name>
+      </properties>
+    </profile>
+
+    <profile>
       <id>homework01-all-calculator-test-suite</id>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.tc.hw1/AllCalculatorTestSuite.xml</suite.xml.name>
@@ -68,7 +97,7 @@
     <profile>
       <id>homework01-sum-sub-test-suite</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <!--<activeByDefault>true</activeByDefault>-->
       </activation>
       <properties>
         <suite.xml.name>${project.basedir}/src/test/resources/home.epam.tc.hw1/SumSubCalculatorTestSuite.xml</suite.xml.name>
@@ -85,13 +114,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>${testng.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
       <version>${selenium.version}</version>
@@ -101,6 +123,13 @@
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
       <version>${webdriver.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>${testng.version}</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -119,11 +148,17 @@
     </dependency>
 
     <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>${allure.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -141,7 +176,6 @@
         </dependencies>
         <configuration>
           <configLocation>
-            <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
             https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
           </configLocation>
           <encoding>${project.build.sourceEncoding}</encoding>
@@ -166,10 +200,38 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
+          <argLine>
+            --illegal-access=permit
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine>
+          <suiteXmlFiles>
+            <suiteXmlFiles>${suite.xml.name}</suiteXmlFiles>
+          </suiteXmlFiles>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
+
+  <reporting>
+    <excludeDefaults>true</excludeDefaults>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+
 
 </project>
